Fixed issue with dropdown on smaller sceens for Community menu.

--- a/css/site.css
+++ b/css/site.css
@@ -625,4 +625,8 @@ div#contents {
   opacity: .5;
 }
 
+ul.dropdown-menu.community-dd {
+  right: -240px;
+}
+
 
